methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: not found: value buggle
 buggle match{
 ^SlugTracking:4: error: not found: value estFaceMur
   case estFaceMur() => return false
        ^