methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 buggle match{
   case estFaceMur() => return false
   case _ => avance()
   						if (getCouleurSol()==Color.green){
                recule()
                return true
              }
   						else {
                recule()
                return false
              }
 }
}